lam lai tra hang

--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -50,7 +50,7 @@
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow avatar avatar-online"
-                                   href="javascript:void(0);"
+                                   href="javascript:void(0);"F
                                    data-bs-toggle="dropdown">
                                     <!--                                    <div class="">-->
                                     <img th:src="@{'/image/'+${#authentication.principal.avatar}}" alt=""
@@ -114,7 +114,7 @@
                         <a th:class="|nav-link page ${active=='accesory' ?'active':''}|" href="/accessory">Phụ kiện</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a th:class="|nav-link page ${active=='invoice' ?'active':''}|" href="/invoice">Đơn hàng</a>
+                        <a th:class="|nav-link page ${active=='invoice' ?'active':''}|" href="/invoice">Tra cứu</a>
                     </li>
                     <li class="nav-item mx-3">
                         <a th:class="|nav-link page ${active=='promotion' ?'active':''}|" href="/promotion">Khuyến
