--- a/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/invoice/detail_invoice.html
@@ -76,7 +76,9 @@
 
                                     </div>
                                     <div>
-                                        <span th:each="field:${billProduct.product.fieldList}">[(${field.value})]</span>
+                                        <span th:each="field,iterStat :${billProduct.product.fieldList}">[(${field.value})]
+                                            <span th:if="${!iterStat.last}">,</span>
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="mb-2">
@@ -102,10 +104,9 @@
                         <hr>
                         <div class="mb-3">
                             <div class="mb-3 row text-end">
-                                <span class="col-sm-10 ">Tổng tiền:</span>
-                                <span class="col-sm-2 "
-                                      th:if="${bill?.voucherValue != null && bill?.deliveryNotes[0]?.deliveryFee != null }">
-                                [(${#numbers.formatDecimal(bill.totalPrice+bill.voucherValue+bill.deliveryNotes[0].deliveryFee,0,'COMMA',0,'POINT')})]
+                                <span class="col-sm-10 ">Tổng tiền hàng:</span>
+                                <span class="col-sm-2 ">
+                                [(${#numbers.formatDecimal(totalBill,0,'COMMA',0,'POINT')})]
                                     <span class="text-decoration-underline fs-tiny">đ</span>
                                 </span>
                                 <span class="col-sm-2 "
@@ -125,7 +126,7 @@
                             <div class="mb-3 row text-end">
                                 <span class="col-sm-10 ">Voucher:</span>
                                 <span class="col-sm-2">
-                                    [(${#numbers.formatDecimal(bill.voucherValue,0,'COMMA',0,'POINT')})]
+                                    -[(${#numbers.formatDecimal(bill.voucherValue,0,'COMMA',0,'POINT')})]
                                     <span class="text-decoration-underline fs-tiny">đ</span>
                                 </span>
                             </div>
@@ -139,8 +140,12 @@
                             <hr>
                             <div class="mb-3 row text-end">
                                 <span class="col-sm-10 fw-semibold ">Thanh toán:</span>
-                                <span class="col-sm-2">
-                                    [(${#numbers.formatDecimal(bill.totalPrice,0,'COMMA',0,'POINT')})]
+                                <span class="col-sm-2" th:if="${bill.voucherValue != null}">
+                                    [(${#numbers.formatDecimal(bill.totalPrice+bill.deliveryNotes[0].deliveryFee-bill.voucherValue,0,'COMMA',0,'POINT')})]
+                                      <span class="text-decoration-underline fs-tiny">đ</span>
+                                </span>
+                                <span class="col-sm-2" th:if="${bill.voucherValue == null}">
+                                        [(${#numbers.formatDecimal(bill.totalPrice+bill.deliveryNotes[0].deliveryFee,0,'COMMA',0,'POINT')})]
                                       <span class="text-decoration-underline fs-tiny">đ</span>
                                 </span>
 
@@ -163,6 +168,9 @@
                                                 <th>Tên sản phẩm</th>
                                                 <th>Số lượng yêu cầu trả</th>
                                                 <th>Số lượng đồng ý trả</th>
+                                                <th>Giá sản phẩm</th>
+                                                <th>Lí do</th>
+                                                <!--                                                <th>Phương thức hoàn tiền</th>-->
                                             </tr>
                                             </thead>
                                             <tbody>
@@ -176,15 +184,29 @@
                                                 </td>
                                                 <td class="flex-wrap">
                                                     [(${historyBillreturn?.billProduct?.product?.product?.nameProduct})]
-                                                    ,[
-                                                    <span th:each="field:${historyBillreturn?.billProduct.product.fieldList}">[(${field.value})]</span>
-                                                    ]
+                                                    <div class="text-decoration-none"> Phân loại hàng:
+                                                        <span th:each="field,iterStat : ${historyBillreturn?.billProduct?.product.fieldList}">[(${field.value})]
+                                                              <span th:if="${!iterStat.last}">,</span>
+                                                        </span>
+                                                    </div>
                                                 </td>
                                                 <td>
                                                     [(${historyBillreturn?.quantityRequestReturn})]
                                                 </td>
                                                 <td>
                                                     [(${historyBillreturn?.quantityAcceptReturn})]
+                                                </td>
+                                                <td>
+                                                    [(${historyBillreturn?.billProduct.price})]
+                                                </td>
+                                                <td>
+                                                    [(${historyBillreturn?.reason})]
+                                                    <div>
+                                                        <div th:each="image:${historyBillreturn?.listImage}">
+                                                            <img th:src="@{'/image/product/'+${image.nameImage}}"
+                                                                 alt="" width="100px">
+                                                        </div>
+                                                    </div>
                                                 </td>
                                             </tr>
                                             </tbody>
