--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -56,7 +56,7 @@
         </ul>
         <div class="tab-content col-lg-9">
             <div class="tab-pane fade show active " id="navs-top-profile" role="tabpanel">
-                <h4>Đơn hàng của bạn</h4>
+               <h4>Đơn hàng của bạn</h4>
                 <div class="mb-4 mx-4">
                     <div class="mb-3 row order" th:each="bill, billStat : ${bill}">
                         <div class="row mt-3">
@@ -67,7 +67,7 @@
                         <input type="text" th:value="${return}" id="return" hidden="hidden">
 
                         <div class="row">
-                            <div th:each="billProduct : ${bill.billProducts}">
+                            <div th:each="billProduct,iter : ${bill.billProducts}">
                                 <div class="row mb-3">
                                     <div class="col-sm-1">
                                         <div class="mb-2">
@@ -82,11 +82,9 @@
                                             <span class="text-black">[(${billProduct.product.product.nameProduct+'-'+billProduct.product.product.sku})]
                                             </span>
                                             <div class="text-decoration-none"> Phân loại hàng:
-                                                <span th:each="field:${billProduct.product.fieldList}">
                                                 <span th:each="field,iterStat : ${billProduct.product.fieldList}">[(${field.value})]
                                                     <span th:if="${!iterStat.last}">,</span>
                                                 </span>
-                                            </span>
                                             </div>
                                             <div class="text-gray">
                                                 <span>x[(${billProduct.quantity})]</span>
@@ -114,8 +112,14 @@
                             <hr>
                             <div class="text-end mb-3">
                                 Thanh toán:
-                                <span>[(${#numbers.formatDecimal(bill.totalPrice,0,'COMMA',0,'POINT')})]</span>
-                                <span class="text-decoration-underline fs-6">đ</span>
+                                <span class="col-sm-2" th:if="${bill.voucherValue != null}">
+                                    [(${#numbers.formatDecimal(bill.totalPrice+bill.deliveryNotes[0].deliveryFee-bill.voucherValue,0,'COMMA',0,'POINT')})]
+                                      <span class="text-decoration-underline fs-tiny">đ</span>
+                                </span>
+                                <span class="col-sm-2" th:if="${bill.voucherValue == null}">
+                                        [(${#numbers.formatDecimal(bill.totalPrice+bill.deliveryNotes[0].deliveryFee,0,'COMMA',0,'POINT')})]
+                                      <span class="text-decoration-underline fs-tiny">đ</span>
+                                </span>
                             </div>
                             <br>
                             <div class="text-end mb-3 ">
