--- a/webBanTiVi/src/main/resources/static/admin/plugin/css/product.css
+++ b/webBanTiVi/src/main/resources/static/admin/plugin/css/product.css
@@ -49,5 +49,8 @@
 }
 
 .larger-checkbox {
-    transform: scale(2); /* Tăng kích cỡ 1.5 lần */
+    transform: scale(2);
+}
+.larger-checkbox-2 {
+    transform: scale(2.3);
 }
