oanh sửa mua hàng voucher

--- a/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/add_product.html
@@ -167,7 +167,7 @@
                         <span class="fst-italic text-danger " id="variant-error"></span>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-secondary" id="submit-add-attributes">
+                        <button type="button" class="btn btn-outline-secondary" id="submit-add-variant">
                             Thêm
                         </button>
                         <button type="button" class="btn btn-outline-secondary"
