dũng suawr lỗi thanh toán

--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -123,7 +123,7 @@
                                                     <span id="quanloc" class="error"></span>
                                                 </div>
                                                 <div class="col">
-                                                    <select class="form-select" th:name="ward" id="ward"
+                                                    <select class="form-select select-ward" th:name="ward" id="ward"
                                                             aria-label=".form-select-sm">
                                                         <option value="xa" selected>Chọn phường xã</option>
                                                     </select>
@@ -210,7 +210,7 @@
                                                     <span id="quanloc" class="error"></span>
                                                 </div>
                                                 <div class="col">
-                                                    <select class="form-select" th:name="ward" id="ward"
+                                                    <select class="form-select select-ward" th:name="ward" id="ward"
                                                             aria-label=".form-select-sm">
                                                         <option value="xa" selected>Chọn phường xã</option>
                                                     </select>
@@ -488,9 +488,7 @@
             }
         })
     })
-    function tongtien() {
-        wardID = this.options[this.selectedIndex].dataset.id;
-        console.log("ID phuong xa:", wardID);
+
 
     function tongtien() {
 
@@ -513,7 +511,7 @@
                             document.getElementById("voucher-reduce").innerText = new Intl.NumberFormat().format(dataVoucher.value) + ' đ'
                             document.getElementById("voucher-info").hidden = false
                             $("#voucher").attr("name", "voucher")
-                            valuePrice=dataVoucher.value
+                            valuePrice = dataVoucher.value
                         } else {
                             $("#voucher").attr("name", "")
                         }
@@ -652,7 +650,6 @@
         })
     }
 
-    $("#ward").on("change", tongtien)
 
     function validateForm() {
 //city
@@ -748,6 +745,7 @@
         }
         totalProForm.value = totalPro
     }
+    $("#ward").on("change", tongtien)
 
     $(document).ready(
         tinhtong(),
@@ -807,6 +805,7 @@
         var tr = x.parentElement.parentElement;
         tr.remove();
     }
+
 </script>
 
 </html>
